Fix highlight box contrast.

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -35,7 +35,7 @@ body {
 
 .highlight-box {
   font-style: italic;
-  background-color: lightgray;
+  background-color: $primary-color;
   padding: 10px;
   font-size: 80% !important;
   margin: 0 30px 0 30px !important;
